apps/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
  labels:
    app.kubernetes.io/name: frigate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: frigate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frigate
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: homelab-critical
      securityContext:
        supplementalGroups:
          - 44
          - 993
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.18.0@sha256:9678a83a76e4730ac7d9ea7428370e32ae656d6b312aaad30d6c69f3fef14d35
          securityContext:
            privileged: true
          ports:
            - name: http-auth
              containerPort: 8971
            - name: http-local
              containerPort: 5000
          resources:
            requests:
              cpu: "2"
              memory: 2Gi
              gpu.intel.com/i915: "1"
            limits:
              cpu: "4"
              memory: 4Gi
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-file
              mountPath: /config/config.yml
              subPath: config.yml
              readOnly: true
            - name: cache
              mountPath: /tmp/cache
            - name: recordings
              mountPath: /media/frigate
            - name: coral
              mountPath: /dev/bus/usb
            - name: shm
              mountPath: /dev/shm
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: frigate-config-pvc
        - name: config-file
          configMap:
            name: frigate-config
        - name: cache
          persistentVolumeClaim:
            claimName: frigate-cache-pvc
        - name: recordings
          hostPath:
            path: /mnt/frigate
            type: Directory
        - name: coral
          hostPath:
            path: /dev/bus/usb
            type: Directory
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
