apps/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  selector:
    app.kubernetes.io/name: frigate
  ports:
    - name: http-auth
      port: 8971
      targetPort: http-auth
