apps/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frigate.worm.run
  rules:
    - host: frigate.worm.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  name: http-auth
